Archive2/8c/93ee7ba77efeaf/output
main.cpp:291:5: error: use of undeclared identifier 'apply_visitor'
    apply_visitor(Printer{}, v0);
    ^
main.cpp:294:5: error: use of undeclared identifier 'apply_visitor'
    apply_visitor(DualPrinter{}, v0, v1);
    ^
2 errors generated.
